@@ -75,6 +75,8 @@ Release 0.2.0 - Sept-2011
   OPTIMIZATIONS
 
   BUG FIXES
+    HCAT-112. install scripts assumes bash shell but don't set it explictly (hashutosh)
+
     HCAT-111. Issues with install instructions and release notes in release candidate (gates via hashutosh)    
 
     HCAT-110. Fix source target (khorgath via hashutosh)    
